name:                hcoin
version:             0.1.0.0
homepage:            https://github.com/githubuser/hcoin#readme
license:             BSD3
license-file:        LICENSE
author:              junp
maintainer:          junpc97@gmail.com
copyright:           2023 junp
category:            Crypto
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable hcoin
  hs-source-dirs:
    src
  main-is:
    Main.hs
  default-language:
    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    mtl,
    hcoin,
    random,
    binary,
    bytestring,
    bytestring-conversion,
    cryptohash,
    aeson,
    text,
    servant,
    servant-client,
    http-client,
    http-client-tls,
    HUnit
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints

executable test-crypto
  hs-source-dirs:
    tests
  main-is:
    TestCrypto.hs
  default-language:
    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    hcoin,
    random,
    bytestring,
    cryptohash,
    generic-deriving,
    HUnit
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints

library
  hs-source-dirs: src
  exposed-modules:
    Crypto.ECDSA
    Crypto.Math
    Data.Encoding
    HCoin.Data.Binary
    HCoin.Data.Transaction
    HCoin.Data.Script
    HCoin.BlockCypherAPI
    HCoin.Transaction
  build-depends:
    base >= 4.7 && < 5,
    mtl,
    binary,
    bytestring,
    random,
    cryptohash,
    aeson,
    text,
    servant,
    servant-client,
    http-client,
    http-client-tls
  default-language:
    Haskell2010
