name:                   hcoin
version:                0.1.0.0
homepage:               https://github.com/githubuser/hcoin#readme
license:                BSD3
license-file:           LICENSE
author:                 junp
maintainer:             junpc97@gmail.com
copyright:              2023 junp
category:               Crypto
build-type:             Simple
cabal-version:          >=1.10
extra-source-files:     README.md
                        CHANGELOG.md

executable hcoin
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall

  main-is:              Main.hs

  build-depends:        base >= 4.7 && < 5
                      , aeson
                      , base16-bytestring
                      , bytestring
                      , binary

                      , mtl
                      , lens

                      , cryptohash
                      , random
                      , wide-word

                      , http-client
                      , http-conduit

                      , hcoin

executable test-crypto
  hs-source-dirs:       tests
  default-language:     Haskell2010
  ghc-options:          -Wall

  main-is:              TestCrypto.hs

  build-depends:        base >= 4.7 && < 5
                      , hcoin
                      , random
                      , binary
                      , bytestring
                      , base16-bytestring
                      , cryptohash
                      , generic-deriving
                      , wide-word
                      , HUnit

library
  hs-source-dirs:       src
  default-language:     Haskell2010

  exposed-modules:      Crypto.ECDSA
                        Crypto.Math

                        Data.ByteString.Base58
                        Data.Encoding

                        Numeric.Positive

                        HCoin.Data.Binary

                        HCoin.Script
                        HCoin.Transaction

  build-depends:        base >= 4.7 && < 5
                      , aeson
                      , base16-bytestring
                      , bytestring
                      , binary

                      , mtl
                      , lens

                      , cryptohash
                      , random
                      , wide-word

                      , http-client
                      , http-conduit
